--- a/css/index.css
+++ b/css/index.css
@@ -1,62 +1,1 @@
-*{
-	margin: 0;
-	padding: 0;
-}
-
-body{
-    -moz-user-select: none; 
-    -webkit-user-select: none; 
-    -ms-user-select:none;
-    user-select:none;
-	display: block;
-	overflow-x: hidden;
-	width: 100%;
-    height: 100%;
-	text-align: center;
-}
-
-ul{
-    display: inline-block;
-    list-style-type: none;
-    text-align: center;
-}
-    
-ul > li{
-    display: inline-block;
-}
-
-a{
-    text-decoration: none;
-    transition: 0.5s all;
-}
-
-a:link{
-    color: #222;
-}
-
-a:visited{
-    color: #228;
-}
-
-a:hover{
-    -webkit-filter: blur(2px);
-}
-
-header{
-    display: inline-block;
-    padding: 0.2em;
-    color: #f44;
-    border: 4px solid #f44;
-    border-radius: 5px;
-    font-size: 2em;
-    cursor: pointer;
-}
-    
-footer{
-    position: relative;
-    width: 100%;
-    padding: 10px;
-    background: #222;
-    color: #fff;
-    z-index: 100;
-}
+*{margin:0;padding:0}body{-moz-user-select:none;-webkit-user-select:none;-ms-user-select:none;user-select:none;display:block;overflow-x:hidden;width:100%;height:100%;text-align:center}ul{display:inline-block;list-style-type:none;text-align:center}ul>li{display:inline-block}a{text-decoration:none;transition:.5s all}a:link{color:#222}a:visited{color:#228}a:hover{-webkit-filter:blur(2px)}header{display:inline-block;padding:.2em;color:#f44;border:4px solid #f44;border-radius:5px;font-size:2em;cursor:pointer}footer{position:relative;width:100%;padding:10px;background:#222;color:#fff;z-index:100}
