--- a/css/grid_layout.css
+++ b/css/grid_layout.css
@@ -1,1 +1,566 @@
-@media all and (min-width:960px) and (max-width:3200px){.col-1{width:60px;margin:10px}.col-2{width:140px;margin:10px}.col-3{width:240px;margin:10px}.col-4{width:300px;margin:10px}.col-5{width:380px;margin:10px}.col-6{width:460px;margin:10px}.col-7{width:540px;margin:10px}.col-8{width:620px;margin:10px}.col-9{width:700px;margin:10px}.col-10{width:780px;margin:10px}.col-11{width:860px;margin:10px}.col-12{width:940px;margin:10px}}@media all and (min-width:880px) and (max-width:960px){.col-1{width:60px;margin:10px}.col-2{width:140px;margin:10px}.col-3{width:240px;margin:10px}.col-4{width:300px;margin:10px}.col-5{width:380px;margin:10px}.col-6{width:460px;margin:10px}.col-7{width:540px;margin:10px}.col-8{width:620px;margin:10px}.col-9{width:700px;margin:10px}.col-10{width:780px;margin:10px}.col-11,.col-12{width:860px;margin:10px}}@media all and (min-width:800px) and (max-width:880px){.col-1{width:60px;margin:10px}.col-2{width:140px;margin:10px}.col-3{width:240px;margin:10px}.col-4{width:300px;margin:10px}.col-5{width:380px;margin:10px}.col-6{width:460px;margin:10px}.col-7{width:540px;margin:10px}.col-8{width:620px;margin:10px}.col-9{width:700px;margin:10px}.col-10,.col-11,.col-12{width:780px;margin:10px}}@media all and (min-width:720px) and (max-width:800px){.col-1{width:60px;margin:10px}.col-2{width:140px;margin:10px}.col-3{width:240px;margin:10px}.col-4{width:300px;margin:10px}.col-5{width:380px;margin:10px}.col-6{width:460px;margin:10px}.col-7{width:540px;margin:10px}.col-8{width:620px;margin:10px}.col-9,.col-10,.col-11,.col-12{width:700px;margin:10px}}@media all and (min-width:640px) and (max-width:720px){.col-1{width:60px;margin:10px}.col-2{width:140px;margin:10px}.col-3{width:240px;margin:10px}.col-4{width:300px;margin:10px}.col-5{width:380px;margin:10px}.col-6{width:460px;margin:10px}.col-7{width:540px;margin:10px}.col-8,.col-9,.col-10,.col-11,.col-12{width:620px;margin:10px}}@media all and (min-width:560px) and (max-width:640px){.col-1{width:60px;margin:10px}.col-2{width:140px;margin:10px}.col-3{width:240px;margin:10px}.col-4{width:300px;margin:10px}.col-5{width:380px;margin:10px}.col-6{width:460px;margin:10px}.col-7,.col-8,.col-9,.col-10,.col-11,.col-12{width:540px;margin:10px}}@media all and (min-width:480px) and (max-width:560px){.col-1{width:60px;margin:10px}.col-2{width:140px;margin:10px}.col-3{width:240px;margin:10px}.col-4{width:300px;margin:10px}.col-5{width:380px;margin:10px}.col-6,.col-7,.col-8,.col-9,.col-10,.col-11,.col-12{width:460px;margin:10px}}@media all and (min-width:400px) and (max-width:480px){.col-1{width:60px;margin:10px}.col-2{width:140px;margin:10px}.col-3{width:240px;margin:10px}.col-4{width:300px;margin:10px}.col-5,.col-6,.col-7,.col-8,.col-9,.col-10,.col-11,.col-12{width:380px;margin:10px}}@media all and (min-width:320px) and (max-width:400px){.col-1{width:60px;margin:10px}.col-2{width:140px;margin:10px}.col-3{width:240px;margin:10px}.col-4,.col-5,.col-6,.col-7,.col-8,.col-9,.col-10,.col-11,.col-12{width:300px;margin:10px}}@media all and (min-width:260px) and (max-width:320px){.col-1{width:60px;margin:10px}.col-2{width:140px;margin:10px}.col-3,.col-4,.col-5,.col-6,.col-7,.col-8,.col-9,.col-10,.col-11,.col-12{width:240px;margin:10px}}@media all and (min-width:160px) and (max-width:260px){.col-1{width:60px;margin:10px}.col-2,.col-3,.col-4,.col-5,.col-6,.col-7,.col-8,.col-9,.col-10,.col-11,.col-12{width:140px;margin:10px}}
+@media all and (min-width: 1200px) and (max-width: 3200px){
+
+	.col-1{
+		width: 60px;
+		margin: 10px;
+	}
+	.col-2{
+		width: 140px;
+		margin: 10px;
+	}
+	.col-3{
+		width: 240px;
+		margin: 10px;
+	}
+	.col-4{
+		width: 300px;
+		margin: 10px;
+	}
+	.col-5{
+		width: 380px;
+		margin: 10px;
+	}
+	.col-6{
+		width: 460px;
+		margin: 10px;
+	}
+	.col-7{
+		width: 540px;
+		margin: 10px;
+	}
+	.col-8{
+		width: 620px;
+		margin: 10px;
+	}
+	.col-9{
+		width: 700px;
+		margin: 10px;
+	}
+	.col-10{
+		width: 780px;
+		margin: 10px;
+	}
+	.col-11{
+		width: 860px;
+		margin: 10px;
+	}
+	.col-12{
+		width: 940px;
+		margin: 10px;
+	}
+
+    .col-13{
+		width: 1020px;
+		margin: 10px;
+	}
+    
+    .col-14{
+        width: 1100px;
+        margin: 10px;
+    }
+    
+    .col-15{
+        width: 1180px;
+        margin: 10px;
+    }
+    
+     .col-16{
+        width: 1260px;
+        margin: 10px;
+    }
+}
+
+@media all and (min-width: 1120px) and (max-width: 1200px){
+
+	.col-1{
+		width: 60px;
+		margin: 10px;
+	}
+	.col-2{
+		width: 140px;
+		margin: 10px;
+	}
+	.col-3{
+		width: 240px;
+		margin: 10px;
+	}
+	.col-4{
+		width: 300px;
+		margin: 10px;
+	}
+	.col-5{
+		width: 380px;
+		margin: 10px;
+	}
+	.col-6{
+		width: 460px;
+		margin: 10px;
+	}
+	.col-7{
+		width: 540px;
+		margin: 10px;
+	}
+	.col-8{
+		width: 620px;
+		margin: 10px;
+	}
+	.col-9{
+		width: 700px;
+		margin: 10px;
+	}
+	.col-10{
+		width: 780px;
+		margin: 10px;
+	}
+	.col-11{
+		width: 860px;
+		margin: 10px;
+	}
+	.col-12{
+		width: 940px;
+		margin: 10px;
+	}
+
+    .col-13{
+		width: 1020px;
+		margin: 10px;
+	}
+    
+    .col-14{
+        width: 1100px;
+        margin: 10px;
+    }
+    
+    .col-15, .col-16{
+        width: 1180px;
+        margin: 10px;
+    }
+}
+
+@media all and (min-width: 1040px) and (max-width: 1120px){
+
+	.col-1{
+		width: 60px;
+		margin: 10px;
+	}
+	.col-2{
+		width: 140px;
+		margin: 10px;
+	}
+	.col-3{
+		width: 240px;
+		margin: 10px;
+	}
+	.col-4{
+		width: 300px;
+		margin: 10px;
+	}
+	.col-5{
+		width: 380px;
+		margin: 10px;
+	}
+	.col-6{
+		width: 460px;
+		margin: 10px;
+	}
+	.col-7{
+		width: 540px;
+		margin: 10px;
+	}
+	.col-8{
+		width: 620px;
+		margin: 10px;
+	}
+	.col-9{
+		width: 700px;
+		margin: 10px;
+	}
+	.col-10{
+		width: 780px;
+		margin: 10px;
+	}
+	.col-11{
+		width: 860px;
+		margin: 10px;
+	}
+	.col-12{
+		width: 940px;
+		margin: 10px;
+	}
+
+    .col-13{
+		width: 1020px;
+		margin: 10px;
+	}
+    
+    .col-14, .col-15, .col-16{
+        width: 1100px;
+        margin: 10px;
+    }
+}
+
+
+@media all and (min-width: 960px) and (max-width: 1040px){
+
+	.col-1{
+		width: 60px;
+		margin: 10px;
+	}
+	.col-2{
+		width: 140px;
+		margin: 10px;
+	}
+	.col-3{
+		width: 240px;
+		margin: 10px;
+	}
+	.col-4{
+		width: 300px;
+		margin: 10px;
+	}
+	.col-5{
+		width: 380px;
+		margin: 10px;
+	}
+	.col-6{
+		width: 460px;
+		margin: 10px;
+	}
+	.col-7{
+		width: 540px;
+		margin: 10px;
+	}
+	.col-8{
+		width: 620px;
+		margin: 10px;
+	}
+	.col-9{
+		width: 700px;
+		margin: 10px;
+	}
+	.col-10{
+		width: 780px;
+		margin: 10px;
+	}
+	.col-11{
+		width: 860px;
+		margin: 10px;
+	}
+	.col-12{
+		width: 940px;
+		margin: 10px;
+	}
+    
+    .col-13, .col-14, .col-15, .col-16{
+        width: 1020px;
+        margin: 10px;
+    }
+
+}
+
+@media all and (min-width: 880px) and (max-width: 960px){
+
+	.col-1{
+		width: 60px;
+		margin: 10px;
+	}
+	.col-2{
+		width: 140px;
+		margin: 10px;
+	}
+	.col-3{
+		width: 240px;
+		margin: 10px;
+	}
+	.col-4{
+		width: 300px;
+		margin: 10px;
+	}
+	.col-5{
+		width: 380px;
+		margin: 10px;
+	}
+	.col-6{
+		width: 460px;
+		margin: 10px;
+	}
+	.col-7{
+		width: 540px;
+		margin: 10px;
+	}
+	.col-8{
+		width: 620px;
+		margin: 10px;
+	}
+	.col-9{
+		width: 700px;
+		margin: 10px;
+	}
+	.col-10{
+		width: 780px;
+		margin: 10px;
+	}
+	.col-11, .col-12, .col-13, .col-14, .col-15, .col-16{
+		width: 860px;
+		margin: 10px;
+	}
+}
+
+
+@media all and (min-width: 800px) and (max-width: 880px){
+
+	.col-1{
+		width: 60px;
+		margin: 10px;
+	}
+	.col-2{
+		width: 140px;
+		margin: 10px;
+	}
+	.col-3{
+		width: 240px;
+		margin: 10px;
+	}
+	.col-4{
+		width: 300px;
+		margin: 10px;
+	}
+	.col-5{
+		width: 380px;
+		margin: 10px;
+	}
+	.col-6{
+		width: 460px;
+		margin: 10px;
+	}
+	.col-7{
+		width: 540px;
+		margin: 10px;
+	}
+	.col-8{
+		width: 620px;
+		margin: 10px;
+	}
+	.col-9{
+		width: 700px;
+		margin: 10px;
+	}
+	.col-10, .col-11, .col-12, .col-13, .col-14, .col-15, .col-16{
+		width: 780px;
+		margin: 10px;
+	}
+}
+
+
+@media all and (min-width: 720px) and (max-width: 800px){
+
+	.col-1{
+		width: 60px;
+		margin: 10px;
+	}
+	.col-2{
+		width: 140px;
+		margin: 10px;
+	}
+	.col-3{
+		width: 240px;
+		margin: 10px;
+	}
+	.col-4{
+		width: 300px;
+		margin: 10px;
+	}
+	.col-5{
+		width: 380px;
+		margin: 10px;
+	}
+	.col-6{
+		width: 460px;
+		margin: 10px;
+	}
+	.col-7{
+		width: 540px;
+		margin: 10px;
+	}
+	.col-8{
+		width: 620px;
+		margin: 10px;
+	}
+	.col-9, .col-10, .col-11, .col-12, .col-13, .col-14, .col-15, .col-16{
+		width: 700px;
+		margin: 10px;
+	}
+}
+
+@media all and (min-width: 640px) and (max-width: 720px){
+
+	.col-1{
+		width: 60px;
+		margin: 10px;
+	}
+	.col-2{
+		width: 140px;
+		margin: 10px;
+	}
+	.col-3{
+		width: 240px;
+		margin: 10px;
+	}
+	.col-4{
+		width: 300px;
+		margin: 10px;
+	}
+	.col-5{
+		width: 380px;
+		margin: 10px;
+	}
+	.col-6{
+		width: 460px;
+		margin: 10px;
+	}
+	.col-7{
+		width: 540px;
+		margin: 10px;
+	}
+	.col-8, .col-9, .col-10, .col-11, .col-12, .col-13, .col-14, .col-15, .col-16{
+		width: 620px;
+		margin: 10px;
+	}
+	
+}
+
+@media all and (min-width: 560px) and (max-width: 640px){
+
+	.col-1{
+		width: 60px;
+		margin: 10px;
+	}
+	.col-2{
+		width: 140px;
+		margin: 10px;
+	}
+	.col-3{
+		width: 240px;
+		margin: 10px;
+	}
+	.col-4{
+		width: 300px;
+		margin: 10px;
+	}
+	.col-5{
+		width: 380px;
+		margin: 10px;
+	}
+	.col-6{
+		width: 460px;
+		margin: 10px;
+	}
+	.col-7, .col-8, .col-9, .col-10, .col-11, .col-12, .col-13, .col-14, .col-15, .col-16{
+		width: 540px;
+		margin: 10px;
+	}
+	
+}
+
+@media all and (min-width: 480px) and (max-width: 560px){
+
+	.col-1{
+		width: 60px;
+		margin: 10px;
+	}
+	.col-2{
+		width: 140px;
+		margin: 10px;
+	}
+	.col-3{
+		width: 240px;
+		margin: 10px;
+	}
+	.col-4{
+		width: 300px;
+		margin: 10px;
+	}
+	.col-5{
+		width: 380px;
+		margin: 10px;
+	}
+	.col-6, .col-7, .col-8, .col-9, .col-10, .col-11, .col-12, .col-13, .col-14, .col-15, .col-16{
+		width: 460px;
+		margin: 10px;
+	}
+
+}
+@media all and (min-width: 400px) and (max-width: 480px){
+
+	.col-1{
+		width: 60px;
+		margin: 10px;
+	}
+	.col-2{
+		width: 140px;
+		margin: 10px;
+	}
+	.col-3{
+		width: 240px;
+		margin: 10px;
+	}
+	.col-4{
+		width: 300px;
+		margin: 10px;
+	}
+	.col-5, .col-6, .col-7, .col-8, .col-9, .col-10, .col-11, .col-12, .col-13, .col-14, .col-15, .col-16{
+		width: 380px;
+		margin: 10px;
+	}
+}
+
+@media all and (min-width: 320px) and (max-width: 400px){
+
+	.col-1{
+		width: 60px;
+		margin: 10px;
+	}
+	.col-2{
+		width: 140px;
+		margin: 10px;
+	}
+	.col-3{
+		width: 240px;
+		margin: 10px;
+	}
+	.col-4,.col-5, .col-6, .col-7, .col-8, .col-9, .col-10, .col-11, .col-12, .col-13, .col-14, .col-15, .col-16{
+		width: 300px;
+		margin: 10px;
+	}
+	
+}
+
+@media all and (min-width: 260px) and (max-width: 320px){
+
+	.col-1{
+		width: 60px;
+		margin: 10px;
+	}
+	.col-2{
+		width: 140px;
+		margin: 10px;
+	}
+	.col-3, .col-4,.col-5, .col-6, .col-7, .col-8, .col-9, .col-10, .col-11, .col-12, .col-13, .col-14, .col-15, .col-16{
+		width: 240px;
+		margin: 10px;
+	}
+	
+}
+
+@media all and (min-width: 160px) and (max-width: 260px){
+
+	.col-1{
+		width: 60px;
+		margin: 10px;
+	}
+	.col-2, .col-3, .col-4,.col-5, .col-6, .col-7, .col-8, .col-9, .col-10, .col-11, .col-12, .col-13, .col-14, .col-15, .col-16{
+		width: 140px;
+		margin: 10px;
+	}
+	
+}
