--- a/templates/programming.html
+++ b/templates/programming.html
@@ -1,1 +1,59 @@
-<h1>*to be updated*</h1>
+<section class="col-10">
+    <h1>Digital Piano</h1>    
+    <iframe src="/templates/programming/p00_piano.html"></iframe>
+</section>
+
+<section class="col-10">
+    <h1>Calculator</h1>    
+    <iframe src="/templates/programming/p01_calculator.html"></iframe>
+</section>
+
+<section class="col-10">
+    <h1>Analog Clock</h1>    
+    <iframe src="/templates/programming/p02_clock.html"></iframe>
+</section>
+
+<section class="col-10">
+    <h1>Binary Clock</h1>    
+    <iframe src="/templates/programming/p03_binary%20clock.html"></iframe>
+</section>
+
+<section class="col-10">
+    <h1>Malaysia Flag</h1>    
+    <iframe src="/templates/programming/p06_flag_of_malaysia.html"></iframe>
+</section>
+
+<section class="col-10">
+    <h1>Image Magnifier</h1>    
+    <iframe src="/templates/programming/p05_magnifier%20macro.html"></iframe>
+</section>
+
+<section class="col-10">
+    <h1>Brownian Movement</h1>    
+    <iframe src="/templates/programming/p07_box2d%20bouncing%20ball.html"></iframe>
+</section>
+
+<section class="col-10">
+    <h1>Matrix</h1>    
+    <iframe src="/templates/programming/p08_matrix.html"></iframe>
+</section>
+
+<section class="col-10">
+    <h1>3D Cube</h1>    
+    <iframe src="/templates/programming/p13_cube3d.html"></iframe>
+</section>
+
+<section class="col-10">
+    <h1>Photo Pad</h1>    
+    <iframe src="/templates/programming/01-photo-pad.html"></iframe>
+</section>
+
+<section class="col-10">
+    <h1>Space Blaster</h1>    
+    <iframe src="/templates/programming/spaceblaster-complete.html"></iframe>
+</section>
+
+<section class="col-10">
+    <h1>Ping Pong</h1>    
+    <iframe src="/templates/programming/p-pingpong.html"></iframe>
+</section>
