--- a/css/index.css
+++ b/css/index.css
@@ -10,6 +10,9 @@
 	margin: 0px;
 }
 
+html, body {
+    height: 100%;
+}
 ::-webkit-scrollbar {
     width: 4px;
     height: 4px;
@@ -76,10 +79,11 @@ header + span {
         text-align: center;
         float: left;
     }
+    
     li {
         display: none;
         clear: both;
-    } 
+    }
 }
 header {
     display: inline-block;
@@ -94,16 +98,36 @@ header a {
 	color: #f44 !important;
 }
 
-footer {
-	padding: 10px;
-}
-
 #main {
 	display: block;
 	width: 100%;
 	box-shadow: 0px 2px 15px #ddd;
+    min-height: 100%;
+    margin-bottom: -40px;
+    /* equal to footer height */
 }
 
+h1 {
+    display: inline-block;
+    width: 100%;
+}
+
+#main:after {
+    content: '';
+    display: block;
+}
+footer {
+    box-shadow: inset 0 5px 15px #eee;
+    vertical-align: middle;
+    line-height: 40px;
+    color: #222;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+footer, #main:after {
+    height: 40px;
+}
 img {
 	width: 100%;
 	border-radius: 5px;
@@ -195,12 +219,15 @@ span {
     }
 
 .album {
+    width: 100%;
+    height: 100%;
+    vertical-align: middle;
 }
+
 .album a {
     display: inline-block;
     height: 150px;
     width: 150px;
-    margin-top: 10px;
     background: white;
     background-size: cover;
     background-position: center center;
@@ -210,9 +237,9 @@ span {
     box-shadow: 0 2px 10px #bbb, inset 0 0 15px #222;
     position: relative;
     -webkit-transform-style: preserve-3d;
-    margin: 10px;
     -webkit-backface-visibility: hidden;
     vertical-align: top;
+    margin-top: 50px;
 }
 .album a:after {
     content: '';
@@ -231,7 +258,6 @@ span {
 }
 .album a:first-child:after {
     content: 'Christmas Market';
-    
 }
 .album a:nth-child(2) {
     background-image: url('../img/photography/02-malaysia/DSCF2336_small.jpg');
@@ -247,12 +273,20 @@ span {
 .album a:nth-child(3):after {
     content: 'Danboard';
 }
-.album a:last-child {
+
+.album a:nth-child(4) {
     background-image: url('../img/photography/07-preiser_figure/06_small.jpg');
     -webkit-transform: rotateZ(20deg) translateY(50px)  translateZ(0);
 }
-.album a:last-child:after {
+.album a:nth-child(4):after {
     content: 'Preiser Figure';
+}
+.album a:last-child {
+    background-image: url('../img/photography/05-berlin_trip/DSCF2626.JPG');
+    -webkit-transform: rotateZ(-5deg) translateY(20px)  translateZ(0);
+}
+.album a:last-child:after {
+    content: 'Berlin';
 }
 #profile {
 	position: absolute;
