--- a/templates/_photography.html
+++ b/templates/_photography.html
@@ -1,6 +1,5 @@
-
-
 <a href='/photography/christmas-market'></a>
 <a href='/photography/malaysia'></a>
 <a href='/photography/danboard'></a>
 <a href='/photography/preiser-figure'></a>
+<a href='/photography/berlin'>Berlin</a>
