--- a/templates/photography.html
+++ b/templates/photography.html
@@ -1,4 +1,4 @@
-<a class="col-2" href="/photography">Return to Album List</a><br>
+<a class="col-12" href="/photography">Return to Album List</a><br>
       
 <% for (var i = 0; i < count; i++) { %>
     <div class='col-8'><img src='/img/photography/loading.gif' alt=''><span></span></div>
@@ -7,7 +7,11 @@
 <div class='gallery'>
     <span class='close fa-stack fa-lg'><i class='fa fa-fw fa-circle-thin fa-stack-2x'></i><i class='fa fa-fw fa-close fa-stack-1x'></i></span>
     <div class='info'>
-        <div class='preview'></div>
+        <div class='preview'>
+            <% for (var i = 0; i < count; i++) { %>
+                <div></div>
+            <% } %>
+        </div>
         <div class='desc'></div>
     </div>
 </div>
