--- a/templates/_photography.html
+++ b/templates/_photography.html
@@ -2,4 +2,4 @@
 <a href='/photography/malaysia'></a>
 <a href='/photography/danboard'></a>
 <a href='/photography/preiser-figure'></a>
-<a href='/photography/berlin'>Berlin</a>
+<a href='/photography/berlin'></a>
