revision ninety-two
updated link to project file

--- a/templates/project.html
+++ b/templates/project.html
@@ -1,5 +1,8 @@
 <h1>Finanz App</h1>
 <br>
+<br>
+<div>View the latest details of this project <a href='http://www.myfinanzapp.com/'>here</a>.</div>
+
 
 <div class="col-10"><img src="/img/finanz/img_1.png" alt="img">  <span>View all your expenses and incomes in a table.</span></div>
 
