--- a/src/atomic/atoms/Header/index.css
+++ b/src/atomic/atoms/Header/index.css
@@ -8,7 +8,7 @@
 .header-brand {
 	text-decoration: none;
 	color: var(--coral-red);
-	border: 2px solid var(--coral-red);
+	border: 3px solid var(--coral-red);
 	box-sizing: content-box;
 	display: inline-block;
 	height: var(--brand-height);
@@ -35,6 +35,13 @@
 	grid-template-columns: auto auto;
 	grid-column-gap: 8px;
 	align-items: center;
+	padding: 0 8px;
+	border-radius: 3px;
+	cursor: pointer;
+}
+
+.header-photo-holder:hover {
+	background: var(--gallery);
 }
 
 .header-username {
@@ -43,7 +50,7 @@
 }
 
 .header-photo {
-	background: var(--gallery);
+	background: white;
 	border: 1px solid var(--gallery);
 	height: 30px;
 	width: 30px;
