--- a/src/atomic/atoms/Navbar/index.css
+++ b/src/atomic/atoms/Navbar/index.css
@@ -5,9 +5,15 @@
 	display: block;
 	height: var(--navbar-height);
 	line-height: var(--navbar-height);
+	font-size: 0.875rem;
+	display: grid;
+	grid-column-gap: 16px;
+	grid-template-columns: repeat(3, min-content);
+	justify-content: flex-end;
 }
 
 .navbar-link {
+	display: inline-block;
 	text-decoration: none;
 	color: inherit;
 }
