--- a/src/index.css
+++ b/src/index.css
@@ -55,3 +55,11 @@ body {
 .footer {
   padding: 0 16px;
 }
+
+.body-column {
+  max-width: var(--max-width);
+  width: 100%;
+  margin: auto;
+}
+
+
