--- a/src/atomic/atoms/Footer/index.css
+++ b/src/atomic/atoms/Footer/index.css
@@ -3,7 +3,7 @@
 .footer {
 	height: var(--footer-height);
 	line-height: var(--footer-height);
-	font-size: 0.75rem;
+	font-size: var(--h6);
 	font-weight: 500;
 	text-align: center;
 	color: var(--gray);
