--- a/src/atomic/atoms/Navbar/index.css
+++ b/src/atomic/atoms/Navbar/index.css
@@ -10,6 +10,7 @@
 	font-size: var(--h6);
 	grid-template-columns: repeat(3, min-content);
 	justify-content: flex-end;
+	box-shadow: inset 0 -5px 15px rgba(0, 0, 0, .05);
 }
 
 .navbar-link {
