--- a/src/atomic/atoms/Navbar/index.css
+++ b/src/atomic/atoms/Navbar/index.css
@@ -8,7 +8,8 @@
 	display: grid;
 	grid-column-gap: 16px;
 	font-size: var(--h6);
-	grid-template-columns: repeat(3, min-content);
+	/* Hardcoded to allow only five columns */
+	grid-template-columns: repeat(5, max-content);
 	justify-content: flex-end;
 	box-shadow: inset 0 -5px 15px rgba(0, 0, 0, .05);
 }
