--- a/games/index.css
+++ b/games/index.css
@@ -11,8 +11,6 @@ body {
   display: block;
   background: black;
   position: fixed;
-  /* width: 100vw; */
-  /* height: 100vh; */
   top: 0;
   left: 0;
   right: 0;
@@ -39,6 +37,14 @@ body {
   position: fixed;
   z-index: 100;
   color: white;
+
+  -webkit-touch-callout:none;
+  -webkit-user-select:none;
+  -khtml-user-select:none;
+  -moz-user-select:none;
+  -ms-user-select:none;
+  user-select:none;
+  -webkit-tap-highlight-color:rgba(0,0,0,0);
 }
 
 .controls--movement {
