--- a/src/atomic/pages/Photography/index.css
+++ b/src/atomic/pages/Photography/index.css
@@ -3,45 +3,51 @@
 .photo-holder {
 	width: 100%;
 	max-width: var(--max-width);
-	display: grid;
-	grid-template-columns: repeat(3,minmax(calc(var(--h1) * 2), 1fr));
-	grid-template-rows: repeat(3, calc(var(--h1) * 6)) var(--h1) calc(var(--h1) * 6);
 }
 
 .photo-grid {
 	position: relative;
-	display: inline-block;
+	text-decoration: none;
+	color: inherit;
+	width: 100%;
+
+	display: grid;
+	grid-template-columns: repeat(2, max-content);
+	align-items: center;
+	
+	justify-content: center;
 }
 
 .photo-caption {
-	position: absolute;
-	z-index: 1000;
 	font-weight: bold;
-	border-bottom: 2px solid black;
+	border-bottom: 3px solid black;
+	display: inline-block;
+
+	/* Hardcode for odd rules*/
+	grid-column: 2 / 3;
+	z-index: 1000;
+	text-shadow: 1px 1px 1px white;
 }
 
 .photo-src {
-	/* filter: grayscale(1); */
 	transition: .174s all ease-out;
 	border: var(--h8) solid white;
+
+	/* Hardcode for odd rules */
+	grid-column: 1 / 2;
 }
 
-/* START */
-.photo-100 {
+.photo-grid:nth-child(even) .photo-src {
+	grid-column: 2 / 3;
+}
+.photo-grid:nth-child(even) .photo-caption {
 	grid-column: 1 / 2;
-	grid-row: 1 / 2;
 }
 
 .photo-100 .photo-src {
 	opacity: 0;
 	transform: rotateZ(-6deg) translateY(-32px);
 	animation: rotate100 .5s .25s ease-out forwards;
-}
-
-.photo-100 .photo-caption {
-	/* This is a constant value */
-	left: 450px;
-	top: 35%;
 }
 
 @keyframes rotate100 {
@@ -51,15 +57,9 @@
 		box-shadow: 0 var(--h8) var(--h4) rgba(0, 0, 0, .25);
 	}
 }
-
 /* END */
 
 /* START */
-.photo-200 {
-	grid-column: 3 / 4;
-	grid-row: 2 / 3;
- 	justify-self: flex-end;
-}
 
 .photo-200 .photo-src {
 	opacity: 0;
@@ -67,11 +67,6 @@
 	justify-self: flex-start;
 	transform: rotateZ(3deg) translateY(-32px);
 	animation: rotate200 .3s .5s ease-out forwards;
-}
-
-.photo-200 .photo-caption {
-	left: calc(-450px / 3);
-	top: 25%;
 }
 
 @keyframes rotate200 {
@@ -85,15 +80,6 @@
 /* END */
 
 /* START */
-.photo-300 {
-	grid-column: 2 / 3;
-	grid-row: 3 / 4;
-}
-
-.photo-300 .photo-caption {
-	left: 50%;
-	top: 100%;
-}
 
 .photo-300 .photo-src {
 	opacity: 0;
@@ -111,21 +97,12 @@
 /* END */
 
 /* START */
-.photo-400 {
-	grid-column: 1 / 2;
-	grid-row: 5 / 6;
-}
-
 .photo-400 .photo-src {
 	opacity: 0;
 	transform: rotateZ(6deg) translateX(-16px);
 	animation: rotate400 .4s 1s ease-out forwards;
 }
 
-.photo-400 .photo-caption {
-	left: 450px;
-	top: 45%;
-}
 
 @keyframes rotate400 {
 	to {
@@ -136,35 +113,106 @@
 }
 /* END */
 
+/* START */
+
+.photo-500 .photo-src {
+	opacity: 0;
+	transform: rotateZ(3deg) translateX(-9px);
+	animation: rotate500 .4s 1s ease-out forwards;
+}
+
+@keyframes rotate500 {
+	to {
+		opacity: 1;
+		transform: rotateZ(-3deg) translateX(0);
+		box-shadow: 0 var(--h8) var(--h4) rgba(0, 0, 0, .25);
+	}
+}
+/* END */
+
+
 
 @media (max-width: 640px) {
-	.photo-100,
-	.photo-200,
-	.photo-300,
-	.photo-400 {
-		grid-column: 2 / 3;
-		justify-self: center;
+	.photo-grid {
+		grid-template-columns: 1fr;
 	}
-
-	.photo-100 .photo-caption {
-		top: 85%;
-		left: 50%;
-	}
-	.photo-200 .photo-caption {
-		top: 85%;
-		left: 5%;
-	}
-	.photo-300 .photo-caption {
-		top: 80%;
-		left: 40%;
-	}
-	.photo-400 .photo-caption {
-		top: 85%;
-		left: 10%;
-	}
-
 	.photo-src {
 		width: 320px;
 		height: auto;
 	}
+}
+
+.img-holder {
+	display: grid;
+	grid-template-columns: repeat(2, 1fr);
+	grid-column-gap: calc(var(--base-line-height) * 1.5);
+	grid-row-gap: calc(var(--base-line-height) * 1.5);
+}
+@media (max-width: 960px) {
+	.img-holder {
+		grid-template-columns: 1fr;
+	}
+}
+.img {
+	width: 100%;
+}
+
+.img img {
+	width: 100%;
+	height: auto;
+	/* filter: grayscale(1); */
+	transition: 0.25s all ease-out;
+	border: var(--h8) solid white;
+	box-shadow: 0 var(--h8) var(--h4) rgba(0, 0, 0, .15);
+	box-sizing: border-box;
+}
+
+.img img:hover {
+	filter: grayscale(0);
+}
+
+.img-placeholder {
+	min-height: 250px;
+}
+
+.img-caption {
+	display: grid;
+	justify-content: flex-start;
+	grid-template-columns: repeat(4, auto);
+	grid-column-gap: var(--base-line-height);
+	color: var(--gray);
+}
+
+
+.lightbox {
+	position: fixed;
+	z-index: 1000;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	width: 100vw;
+	height: 100vh;
+	background: rgba(0, 0, 0, .9);
+	text-align: center;
+	display: grid;
+	justify-content: center;
+	align-content: center;
+}
+.lightbox img {
+	width: 100%;
+	height: auto;
+}
+.lightbox-close {
+	cursor: pointer;
+	color: white;
+	opacity: .8;
+	font-size: var(--h1);
+	display: inline-block;
+	position: absolute;
+	right: 1rem;
+	top: 1rem;
+}
+.lightbox-close:hover {
+	opacity: 1;
 }
