--- a/src/atomic/pages/Photography/index.css
+++ b/src/atomic/pages/Photography/index.css
@@ -3,55 +3,92 @@
 .photo-holder {
 	width: 100%;
 	max-width: var(--max-width);
-}
-
-.photo-grid {
-	position: relative;
-	text-decoration: none;
-	color: inherit;
-	width: 100%;
-
-	display: grid;
-	grid-template-columns: repeat(2, max-content);
-	align-items: center;
 	
-	justify-content: center;
+	display: grid;
+	grid-template-columns: 1fr;
+	grid-row-gap: var(--h4);
+  align-content: center;
+	align-items: center;
+	align-self: center;
+	justify-items: center;
 }
 
-.photo-caption {
-	font-weight: bold;
-	border-bottom: 3px solid black;
-	display: inline-block;
-
-	/* Hardcode for odd rules*/
-	grid-column: 2 / 3;
-	z-index: 1000;
-	text-shadow: 1px 1px 1px white;
-}
-.photo-src {
+.photo-album-link {
+	display: block;
+	position: relative;
 	transition: .174s all ease-out;
 	border: var(--h8) solid white;
-
-	/* Hardcode for odd rules */
-	grid-column: 1 / 2;
-
-
+	
+	width: 100%;
 	max-width: 480px;
+
+	font-weight: bold;
+	font-size: var(--h4);
+	line-height: 0;
+	text-align: center;
+
+	color: white;
+	background: rgba(0, 0, 0, .4);
+	box-shadow: 0 var(--h8) var(--h4) rgba(0, 0, 0, .25);
+}
+@media (max-width: 480px) {
+	.photo-album-link {
+		max-width: 400px;
+	}
+}
+.photo-album-link:hover:before {
+	content: attr(data-title);
+  color: white;	
+	font-size: var(--h4);
+	font-weight: bold;
+
+	z-index: 1000;
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+
+	display: grid;
+	width: 100%;
+	height: 100%;
+
+	align-content: center;
+	justify-content: center;
+
+	background: rgba(0, 0, 0, .4);
+	transition: .134s all ease-out;
+}
+.photo-album {
+	height: auto;
 	width: 100%;
 }
 
-.photo-grid:nth-child(even) .photo-src {
-	grid-column: 2 / 3;
-}
-.photo-grid:nth-child(even) .photo-caption {
-	grid-column: 1 / 2;
-}
-
-.photo-100 .photo-src {
+.photo-album-link:nth-child(n) {
 	opacity: 0;
 	transform: rotateZ(-6deg) translateY(-32px);
 	animation: rotate100 .5s .25s ease-out forwards;
-	height: auto;
+}
+.photo-album-link:nth-child(2n) {
+	opacity: 0;
+	transform-origin: left top;
+	transform: rotateZ(3deg) translateY(-32px);
+	animation: rotate200 .3s .5s ease-out forwards;
+}
+.photo-album-link:nth-child(3n) {
+	opacity: 0;
+	transform: rotateZ(0) scale(0.95) translateY(-16px);
+	animation: rotate300 .4s .75s ease-out forwards;
+}
+.photo-album-link:nth-child(4n) {
+	opacity: 0;
+	transform: rotateZ(6deg) translateX(-16px);
+	animation: rotate400 .4s 1s ease-out forwards;
+}
+.photo-album-link:nth-child(5n) {
+	opacity: 0;
+	transform: rotateZ(3deg) translateX(-9px);
+	animation: rotate500 .4s 1s ease-out forwards;
 }
 
 @keyframes rotate100 {
@@ -61,18 +98,6 @@
 		box-shadow: 0 var(--h8) var(--h4) rgba(0, 0, 0, .25);
 	}
 }
-/* END */
-
-/* START */
-
-.photo-200 .photo-src {
-	opacity: 0;
-	transform-origin: left top;
-	justify-self: flex-start;
-	transform: rotateZ(3deg) translateY(-32px);
-	animation: rotate200 .3s .5s ease-out forwards;
-}
-
 @keyframes rotate200 {
 	to {
 		opacity: 1;
@@ -80,34 +105,13 @@
 		box-shadow: 0 var(--h8) var(--h4) rgba(0, 0, 0, .25);
 	}
 }
-
-/* END */
-
-/* START */
-
-.photo-300 .photo-src {
-	opacity: 0;
-	transform: rotateZ(0) scale(0.95) translateY(-16px);
-	animation: rotate300 .4s .75s ease-out forwards;
-}
-
 @keyframes rotate300 {
 	to {
 		opacity: 1;
-		transform: rotateZ(-3deg) scale(0.9) translateY(0);
+		transform: rotateZ(-3deg) scale(0.975) translateY(0);
 		box-shadow: 0 var(--h8) var(--h4) rgba(0, 0, 0, .25);
 	}
 }
-/* END */
-
-/* START */
-.photo-400 .photo-src {
-	opacity: 0;
-	transform: rotateZ(6deg) translateX(-16px);
-	animation: rotate400 .4s 1s ease-out forwards;
-}
-
-
 @keyframes rotate400 {
 	to {
 		opacity: 1;
@@ -115,16 +119,6 @@
 		box-shadow: 0 var(--h8) var(--h4) rgba(0, 0, 0, .25);
 	}
 }
-/* END */
-
-/* START */
-
-.photo-500 .photo-src {
-	opacity: 0;
-	transform: rotateZ(3deg) translateX(-9px);
-	animation: rotate500 .4s 1s ease-out forwards;
-}
-
 @keyframes rotate500 {
 	to {
 		opacity: 1;
@@ -132,35 +126,10 @@
 		box-shadow: 0 var(--h8) var(--h4) rgba(0, 0, 0, .25);
 	}
 }
-/* END */
 
-
-
-@media (max-width: 640px) {
-	.photo-grid {
-		grid-template-columns: 1fr;
-	}
-	.photo-src {
-		width: 320px;
-		height: auto;
-	}
-}
-
-.img-holder {
-	display: grid;
-	grid-template-columns: repeat(2, 1fr);
-	grid-column-gap: calc(var(--base-line-height) * 1.5);
-	grid-row-gap: calc(var(--base-line-height) * 1.5);
-}
-@media (max-width: 960px) {
-	.img-holder {
-		grid-template-columns: 1fr;
-	}
-}
 .img {
 	width: 100%;
 }
-
 .img img {
 	width: 100%;
 	height: auto;
@@ -170,15 +139,12 @@
 	box-shadow: 0 var(--h8) var(--h4) rgba(0, 0, 0, .15);
 	box-sizing: border-box;
 }
-
 .img img:hover {
 	filter: grayscale(0);
 }
-
 .img-placeholder {
 	min-height: 250px;
 }
-
 .img-caption {
 	display: grid;
 	justify-content: flex-start;
@@ -186,7 +152,26 @@
 	grid-column-gap: var(--base-line-height);
 	color: var(--gray);
 }
-
+.img-holder {
+	display: grid;
+	grid-template-columns: repeat(2, 1fr);
+	grid-column-gap: calc(var(--base-line-height) * 1.5);
+	grid-row-gap: calc(var(--base-line-height) * 1.5);
+}
+@media (max-width: 640px) {
+	.photo-grid {
+		grid-template-columns: 1fr;
+	}
+	.photo-src {
+		width: 320px;
+		height: auto;
+	}
+}
+@media (max-width: 960px) {
+	.img-holder {
+		grid-template-columns: 1fr;
+	}
+}
 
 .lightbox {
 	position: fixed;
